--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   flutter_screenutil: ^5.9.3
   http: ^1.2.2
   flutter_dotenv: ^5.2.1
+  flutter_blurhash: ^0.8.2
+  lottie: ^3.1.3
 
 
 
@@ -78,6 +80,7 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/animations/
+    - assets/fonts/
     - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -91,6 +94,17 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+  fonts:
+    - family: Poppins
+      fonts:
+        - asset: assets/fonts/Poppins-Regular.ttf
+        - asset: assets/fonts/Poppins-Bold.ttf
+        - asset: assets/fonts/Poppins-Italic.ttf
+        - asset: assets/fonts/Poppins-Light.ttf
+        - asset: assets/fonts/Poppins-Medium.ttf
+        - asset: assets/fonts/Poppins-SemiBold.ttf
+          # Add more variations if there are any
+
   # fonts:
   #   - family: Schyler
   #     fonts:
